fix header on mobile

--- a/styles.css
+++ b/styles.css
@@ -128,38 +128,37 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 @media (max-width: 964px) {
-    .site-header {
-        flex-direction: column;
-        height: auto;
-        padding: 20px 0;
-        max-height: 300px;
-    }
+  .site-header {
+    flex-direction: column;
+    height: auto;
+    padding: 20px 0;
+    max-height: none;
+  }
 
-    .logo {
-        height: 450px;
-        min-width: 450px;
-        margin: 0;
-        transform: translateY(-100px);
-        position: relative;
-        z-index: 0; 
-    }
+  .logo {
+    height: 300px;
+    min-width: 300px;
+    margin: 0 auto;
+    transform: scale(2.3) translate(0, 12px);
+    position: relative;
+    z-index: 0;
+  }
 
-    .nav-links {
-        margin: -220px 0 0 0;
-        gap: 15px;
-        position: relative;
-        z-index: 10; 
-    }
+  .nav-links {
+    margin: 20px 0 0 0;
+    gap: 15px;
+    position: relative;
+    z-index: 10;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
 
-    .nav-links a {
-        font-size: 1.5rem;
-    }
+  .nav-links a {
+    font-size: 1.5rem;
+  }
 
-    /* .grid-container {
-        grid-template-columns: 1fr;
-    } */
-
-    .product-window {
+  .product-window {
         margin: 10px auto;
     }
 }
